# setmeup

./: .editorconfig  MANIFEST.in  pyproject.toml  setup.py  tox.ini
dtf/: app.py
dtf/dotfiles/: .bashrc  .gitconfig  __init__.py
setmeup/: __init__.py  cli.py  dotfiles.py
setmeup/assets/: assets.json
setmeup/assets/dotfiles/: .bash_profile  .bashrc  .gitignore
setmeup/dotfiles/: .bash_profile  .bashrc  .condarc  .editorconfig  .gitconfig  .gitignore  .vimrc  __init__.py
tests/: test_cli.py  test_dotfile_class_methods.py  test_dotfile_functions.py  test_dotfile_methods.py  test_dotfiles.py  test_dtf_cli_interfaces.py
