[tool.poetry]
name = "dtf"
version = "0.1.8"
description = "dtf is my personal dotfile manager."
license = "MIT"
authors = ["Eric Chen <eric@ericnchen.com>"]
packages = [{include = "dtf"}]

[tool.poetry.scripts]
dtf = 'dtf:app.cli'

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
